--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,58 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-        "target": "ESNext",
-        "strict": false,
-        "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "removeComments": false,
-        "preserveConstEnums": true,
-        "pretty": true,
-        "outDir": "dist",
-        "noUnusedParameters": false,
-        "noUnusedLocals": false,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "noEmitHelpers": true,
-        "noEmit": true,
-        "newLine": "lf",
-        "moduleResolution": "Node",
-        "module": "ESNext",
-        "ignoreDeprecations": "5.0",
-        "importHelpers": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "emitDecoratorMetadata": true,
-        "declaration": false,
-        "alwaysStrict": false,
         "allowSyntheticDefaultImports": true,
-        "useDefineForClassFields": true,
-        "rootDir": ".",
-        "paths": {
-            "@index": [
-                "./src/index.ts"
-            ]
-        },
+        "alwaysStrict": true,
+        "declaration": false,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "ignoreDeprecations": "5.0",
         "lib": [
             "ESNext"
-        ]
+        ],
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "newLine": "lf",
+        "noEmitHelpers": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "preserveConstEnums": true,
+        "pretty": true,
+        "removeComments": false,
+        "resolveJsonModule": true,
+        "strict": true,
+        "target": "ESNext",
+        "useDefineForClassFields": true,
+        "rootDir": ".",
+        "outDir": "dist",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "skipLibCheck": true,
+        "noEmit": true,
+        "paths": {
+            "@core/*": [
+                "./src/core/*.ts"
+            ],
+            "@config/*": [
+                "./src/config/*.ts"
+            ],
+            "@events/*": [
+                "./src/events/*.ts"
+            ],
+            "@interfaces/*": [
+                "./src/interfaces/*.ts"
+            ],
+            "@services/*": [
+                "./src/services/*.ts"
+            ],
+            "@utils/*": [
+                "./src/utils/*.ts"
+            ]
+        }
     },
     "exclude": [
         "node_modules"
-    ],
+    ]
 }
