--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
         "typescript-eslint": "^7.8.0"
     },
     "engines": {
-        "node": ">=20.0.0 <21.0.0"
+        "node": "20.x"
     }
 }
